🎨 Улучшить дизайн SEO админки
✨ Новый современный дизайн:
- Glassmorphism эффекты с blur
- Современные градиенты (purple-blue)
- Плавные анимации и hover-эффекты
- Красивые иконки (shield, rocket, checkmark)
- Обновленная типографика
- Улучшенные пропорции и отступы

🔐 Логин экран:
- Стеклянный эффект с декоративными элементами
- Анимированные переходы
- Современная иконка безопасности

🚀 Основная панель:
- Обновленный header с градиентом
- Улучшенная кнопка выхода
- Красивая кнопка сохранения с SVG иконками
- CSS анимация для спиннера

--- a/package.json
+++ b/package.json
@@ -12,15 +12,20 @@
     "@headlessui/react": "^2.2.6",
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^5.2.1",
+    "@types/leaflet": "^1.9.20",
+    "@types/node-telegram-bot-api": "^0.64.10",
     "axios": "^1.11.0",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.12",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.534.0",
     "next": "15.4.5",
     "next-intl": "^4.3.4",
+    "node-telegram-bot-api": "^0.66.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.61.1",
+    "react-leaflet": "^5.0.0",
     "tailwind-merge": "^3.3.1",
     "web-vitals": "^5.1.0",
     "zod": "^4.0.14"
