--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "bot:poll": "node scripts/polling-bot.js"
   },
   "dependencies": {
     "@headlessui/react": "^2.2.6",
