--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-leaflet": "^5.0.0",
     "tailwind-merge": "^3.3.1",
     "web-vitals": "^5.1.0",
+    "xlsx": "^0.18.5",
     "zod": "^4.0.14"
   },
   "devDependencies": {
