--- a/public/manifest.json
+++ b/public/manifest.json
@@ -5,7 +5,7 @@
   "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
-  "theme_color": "#0284c7",
+  "theme_color": "#0050A0",
   "orientation": "portrait-primary",
   "scope": "/",
   "lang": "ru",
