--- a/public/manifest.json
+++ b/public/manifest.json
@@ -12,9 +12,15 @@
   "categories": ["business", "productivity", "utilities"],
   "icons": [
     {
-      "src": "/next.svg",
-      "sizes": "any",
-      "type": "image/svg+xml",
+      "src": "/images/logo-velta.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/images/logo-velta.png",
+      "sizes": "512x512",
+      "type": "image/png",
       "purpose": "any"
     }
   ],
@@ -23,11 +29,11 @@
       "name": "Калькулятор",
       "short_name": "Калькулятор",
       "description": "Рассчитать стоимость доставки",
-      "url": "/calculator",
+      "url": "/#calculator-section",
       "icons": [
         {
-          "src": "/next.svg",
-          "sizes": "any"
+          "src": "/images/logo-velta.png",
+          "sizes": "96x96"
         }
       ]
     },
@@ -38,8 +44,8 @@
       "url": "/services",
       "icons": [
         {
-          "src": "/next.svg",
-          "sizes": "any"
+          "src": "/images/logo-velta.png",
+          "sizes": "96x96"
         }
       ]
     },
@@ -50,8 +56,8 @@
       "url": "/contacts",
       "icons": [
         {
-          "src": "/next.svg",
-          "sizes": "any"
+          "src": "/images/logo-velta.png",
+          "sizes": "96x96"
         }
       ]
     }
