--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "framer-motion": "^12.23.12",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.534.0",
-    "next": "15.4.5",
+    "mongodb": "^6.18.0",
+    "next": "^15.5.0",
     "next-intl": "^4.3.4",
     "node-telegram-bot-api": "^0.66.0",
     "react": "19.1.0",
