--- a/package.json
+++ b/package.json
@@ -21,11 +21,11 @@
     "leaflet": "^1.9.4",
     "lucide-react": "^0.534.0",
     "mongodb": "^6.18.0",
-    "next": "^15.5.0",
+    "next": "^14.2.0",
     "next-intl": "^4.3.4",
     "node-telegram-bot-api": "^0.66.0",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.61.1",
     "react-leaflet": "^5.0.0",
     "tailwind-merge": "^3.3.1",
@@ -36,11 +36,11 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "autoprefixer": "^10.4.20",
-    "eslint": "^9",
-    "eslint-config-next": "15.4.5",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "14.2.0",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
