fix: align deps for Vercel (React 18 + react-leaflet 4.x, overrides)

--- a/package.json
+++ b/package.json
@@ -24,20 +24,29 @@
     "next": "^14.2.0",
     "next-intl": "^4.3.4",
     "node-telegram-bot-api": "^0.66.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-hook-form": "^7.61.1",
-    "react-leaflet": "^5.0.0",
+    "react-leaflet": "^4.2.1",
     "tailwind-merge": "^3.3.1",
     "web-vitals": "^5.1.0",
     "xlsx": "^0.18.5",
     "zod": "^4.0.14"
   },
+  "overrides": {
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "@floating-ui/react": { "react": "18.3.1", "react-dom": "18.3.1" },
+    "next-intl": { "react": "18.3.1" },
+    "use-intl": { "react": "18.3.1" },
+    "framer-motion": { "react": "18.3.1", "react-dom": "18.3.1" },
+    "lucide-react": { "react": "18.3.1" }
+  },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "autoprefixer": "^10.4.20",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.2.0",
